@@ -12,6 +12,8 @@ Changes:
 - Refactoring Webgui parts and replace deprecated php code.
 - sshd Challenge-Response Authentication is now configurable.
 - Rewrite of zpool tools.
+- Add zfs snapshot rollback.
+- Add zpool import using gpt labels / gpt id.
 - Upgrade exfat to 1.2.3.
 - Upgrade phpvirtualbox to 5.0-5.
 - Upgrade tmux to 2.2.
